# capstone_insta

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
authentication/: forms.py  views.py
helpers/: helper_functions.py
instagram_config/: .env  asgi.py  settings.py  urls.py  wsgi.py
instauser/: admin.py  apps.py  forms.py  models.py  views.py
instauser/migrations/: 0001_initial.py  0002_auto_20201007_1440.py  0002_instauser_theme.py  0003_auto_20201008_1633.py  0004_auto_20201013_0031.py
notifications/: models.py  views.py
notifications/migrations/: 0001_initial.py
post/: admin.py  forms.py  models.py  views.py
post/migrations/: 0001_initial.py  0002_comment.py  0003_auto_20201011_0908.py
static/: blob.css  djangoAjax.js  form.css  login.css  style.css  theme-switcher.js
static/css/: blob.css  form.css  login.css  profile.css  style.css
static/css/clickable_themes/: dark.css  holiday_dec.css  holiday_feb.css  holiday_july.css  holiday_oct.css
staticfiles/: staticfiles.json
staticfiles/css/: form.acb2766a061f.css  login.14549982d224.css  login.947a743e5e16.css  login.css  profile.c9eacad6ccb0.css  style.898a3984dbe0.css  style.css
staticfiles/css/clickable_themes/: holiday_dec.66339094bea3.css  holiday_feb.css  (+4 more)
templates/: 403.html  404.html  500.html  blobmenu.html  details.html  edit.html  feed.html  login.html  notifications.html  profile.html  share.html  signup.html  upload.html
templates/partials/: comment.html  head.html  post.html  scripts.html  themes.html  toolbar.html  users.html
