[tool.poetry]
name = "Capstone_Amethyst"
version = "0.1.0"
description = ""
authors = ["Jordan Haagenson <jdhaagenson@gmail.com>"]
[tool.poetry.dependencies]
python = "^3.8.5"
django = "^3.1.2"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
